@@ -1,3 +1,10 @@
+openmolar (0.3.0+bzr0772-0~__DIST__0) __DIST__; urgency=low
+
+  * ability to edit today's notes
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 22 Oct 2012 18:39:15 +0100
+
+
 openmolar (0.3.0+bzr0771-0~__DIST__0) __DIST__; urgency=low
 
   * re-introduced system dat into the formatted notes
